fix: polyline input scrollbar hidden

--- a/scss/defaults/_polyline-input-default.scss
+++ b/scss/defaults/_polyline-input-default.scss
@@ -13,6 +13,13 @@
     font: inherit;
     resize: none;
     min-width: 0;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 
   &::after {
